# streampress

./: .gitignore  LICENSE  MANIFEST.in  README.md  meson.build  meson_options.txt  pyproject.toml
.github/workflows/: R-CMD-check.yaml  pkgdown.yaml  pypi-publish.yaml  python-tests.yaml
docs/: index.html
include/streampress/: sparse.hpp  streampress_api.hpp  transpose.hpp
include/streampress/codec/: varint.hpp
include/streampress/core/: prng.hpp
include/streampress/format/: checksum.hpp  header_dense.hpp  header_legacy.hpp  legacy.hpp
include/streampress/model/: analyzer.hpp  predictor.hpp
include/streampress/transform/: value_map.hpp
python/: CMakeLists.txt  README.md
python/docs/: conf.py  index.md
python/src/streampress/: _bindings.cpp  streampress.py
python/tests/: test_streampress.py
python/vignettes/: streampress.md
r/: DESCRIPTION  LICENSE.md  NAMESPACE  _pkgdown.yml
r/R/: RcppExports.R  streampress.R  utils.R
r/inst/include/streampress/: chunk_iterator.hpp  dense.hpp  streampress_api.hpp
r/inst/include/streampress/codec/: bitstream.hpp  golomb_rice.hpp  rans.hpp
r/inst/include/streampress/core/: types.hpp
r/inst/include/streampress/format/: header_sparse.hpp
r/inst/include/streampress/transform/: delta.hpp
r/man/: Rcpp_sp_metadata_v3.Rd  Rcpp_sp_read_dense.Rd  Rcpp_sp_read_transpose.Rd  Rcpp_sp_write_dense.Rd  Rcpp_st_add_transpose.Rd  Rcpp_st_read_obs.Rd  Rcpp_st_read_var.Rd  st_convert.Rd  st_read_dense.Rd  st_read_obs.Rd  st_read_var.Rd  st_write_dense.Rd  streampress.Rd
r/src/: Makevars  RcppExports.cpp  streampress_bridge.cpp
r/tests/: testthat.R
r/tests/testthat/: test-streampress.R
r/vignettes/: introduction.Rmd
tests/: meson.build  test_streampress.cpp
