[build-system]
requires = ["scikit-build-core>=0.5", "nanobind>=1.9"]
build-backend = "scikit_build_core.build"

[project]
name = "streampress"
version = "1.0.0"
description = "High-performance compressed sparse matrix I/O (.spz format)"
readme = "python/README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Zachary DeBruine", email = "zacharydebruine@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]
keywords = ["sparse matrix", "compression", "io", "bioinformatics", "single-cell"]

[project.optional-dependencies]
test = ["pytest>=7.0"]
docs = ["sphinx", "sphinx-rtd-theme", "myst-nb", "jupyter-cache", "jupytext"]
pandas = ["pandas>=1.3"]

[project.urls]
Homepage = "https://github.com/zdebruine/streampress"
Repository = "https://github.com/zdebruine/streampress"
"Bug Tracker" = "https://github.com/zdebruine/streampress/issues"

[tool.scikit-build]
cmake.build-type = "Release"
cmake.source-dir = "python"
wheel.packages = ["python/src/streampress"]
editable.mode = "redirect"

[tool.pytest.ini_options]
testpaths = ["python/tests"]
